[tool.poetry]
name = "deep-meta-learning-lab"
version = "0.1.0"
description = ""
authors = ["Lucas Valentim <lucasvalentimdias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "=0.24.2"
jupyter = "=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
